[package]
name = "moonsock"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Moonsock is a simple way to connect to a klipper/moonraker 3D printer websocket from anywhere where tokio can be ran and your printer is accessible from the internet."
repository = "https://github.com/Rottschaferanders/moonsock.git"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2.2.2"
rand = "0.8.5"
maplit = "1.0.2"
