[package]
name = "moonsock"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Moonsock is a simple way to connect to a klipper/moonraker 3D printer websocket from anywhere where tokio can be ran and your printer is accessible from the internet."
repository = "https://github.com/Rottschaferanders/moonsock.git"
readme = "README.md"


# [lib]
# proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
tokio = { version = "1", features = ["full", "tracing", "macros"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
futures = "0.3"
# tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2.2.2"
rand = "0.8.5"
maplit = "1.0.2"
anyhow = "1"
# hyper = "1.3.1"
# hyper = { version = "1", features = ["http1", "server", "client"], optional = false }
# http-body-util = "0.1.0"
# hyper-util = "0.1"
pin-project = { version = "1.0.8", optional = true }
# futures = "0.3.30"

# fastwebsockets = {version = "0.7", features = ["upgrade"] } 
# spinners = "4.1.1"
spinoff = "0.8"
thiserror = "1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# [dependencies.fastwebsockets]
# version = "0.7"
# features = ["upgrade"]

# jsonrpc-message-derive = { git = "https://github.com/Rottschaferanders/jsonrpc-message-derive.git" }
console-subscriber = "0.3.0"


[dev-dependencies]
# tokio = { version = "1.25.0", features = ["full", "macros"] }
tokio-rustls = "0.26.0"
rustls-pemfile = "2"
# hyper-util = { version = "0.1.0", features = ["tokio"] }
# http-body-util = { version = "0.1.0" }
# hyper = { version = "1", features = ["http1", "server", "client"] }
assert2 = "0.3.4"
trybuild = "1.0.80"
criterion = "0.5"
# anyhow = "1.0.71"
webpki-roots = "0.26"
bytes = "1.4.0"
axum = "0.7.4"
